k8s/frontend/0-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: findyourjob-frontend
  labels:
    name: findyourjob-frontend
spec:
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  minReadySeconds: 5
  selector:
    matchLabels:
      app: findyourjob-frontend
  template:
    metadata:
      labels:
        app: findyourjob-frontend
    spec:
      imagePullSecrets:
        - name: docker-config-json
      containers:
        - name: findyourjob-frontend
          image: ghcr.io/nguyenphucbao68/findyourjob-frontend:latest
          # image: findyourjob-frontend:latest
          imagePullPolicy: Always
          # imagePullPolicy: Never
          resources:
            requests:
              cpu: '128m'
              memory: '256Mi'
            limits:
              cpu: '500m'
              memory: '750Mi'
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: findyourjob-frontend-svc
spec:
  type: NodePort
  selector:
    app: findyourjob-frontend
  ports:
    - port: 3000
      targetPort: 3000
      # nodePort: 30001
